블로그 내용 변경ㅇ

--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "블로그 업로드 테스트1"
+title: "첫 블로그..^^1"
 date: "2022-06-01"
 hero_image: "./ggosom2.jpg"
 hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
@@ -7,9 +7,14 @@ hero_image_credit_text: "ggosomsom 1"
 hero_image_credit_link: "https://pixabay.com/ko/images/search/%EA%B3%A0%EC%96%91%EC%9D%B4/"
 ---
 
-This is my first blog post! Isn't it _great_?
-Some of my **favorite** things are:
+드디어 나만의 블로그가 제작되었습니다....^^
+꼬솜이와 함께하는 개발 블로그 시작..^O^
 
-- Petting ggosom
-- Singing
-- Eating potato-based foods
+[ 꼬솜 : '고양이 + 소'를 합친것 ]
+
+[ 특징 ]
+
+- 얼굴에 소모양이 있음
+- 가끔 사나움, 물어요..^^
+- 평소엔 얌전하며 궁디팡팡을 제일 좋아함
+- 다른사람은 다 무시하면서 엄마만 좋아함..^^
