코드하이라이터 적용

--- a/blog/another-post/index.mdx
+++ b/blog/another-post/index.mdx
@@ -3,4 +3,14 @@ title: "블로그 업로드 테스트2"
 date: "2022-06-02"
 ---
 
+```js
+const a = 100;
+```
+
+```html
+<div>
+  <a href="https://wiken.io/ken/5744" target="_blank">안녕</a>
+</div>
+```
+
 Here's another post! It's even better than the first one!
