태그 표시용 페이지 제작

--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,6 +1,9 @@
 ---
 title: "첫 블로그..^^1"
 date: "2022-06-01"
+tags:
+  - "꼬솜,   "
+  - "html"
 hero_image: "./ggosom4.jpg"
 hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
 hero_image_credit_text: "ggosomsom 1"
@@ -15,6 +18,6 @@ hero_image_credit_link: "https://pixabay.com/ko/images/search/%EA%B3%A0%EC%96%91
 [ 특징 ]
 
 - 얼굴에 소모양이 있음
-- 가끔 사나움, 물어요..^^
+- 개냥이지만 가끔 사나움, 물어요..^^
 - 평소엔 얌전하며 궁디팡팡을 제일 좋아함
 - 다른사람은 다 무시하면서 엄마만 좋아함..^^
