--- a/blog/yet-another-post/index.mdx
+++ b/blog/yet-another-post/index.mdx
@@ -2,6 +2,10 @@
 title: "블로그 업로드 테스트3"
 
 date: "2022-06-03"
+tags:
+  - "VSCODE,   "
+  - "SQL,   "
+  - "JS"
 hero_image: "./ggosom5.jpg"
 hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
 hero_image_credit_text: "ggosomsom 3"
