--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,19 +1,16 @@
 ---
 title: "첫 블로그..^^1"
 date: "2022-06-01"
-tags:
-  - "꼬솜,   "
-  - "html"
 hero_image: "./ggosom4.jpg"
 hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
 hero_image_credit_text: "ggosomsom 1"
 hero_image_credit_link: "https://pixabay.com/ko/images/search/%EA%B3%A0%EC%96%91%EC%9D%B4/"
 ---
 
-드디어 나만의 블로그가 제작되었습니다....^^
+드디어 저만의 블로그가 제작되었습니다....^^
 꼬솜이와 함께하는 개발 블로그 시작..^O^
 
-[ 꼬솜 : '고양이 + 소'를 합친것 ]
+[ 꼬솜 : '고양이 + 소' ]
 
 [ 특징 ]
 
